--- a/gb/21/5/27/n12980022.md
+++ b/gb/21/5/27/n12980022.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fbacqn3783/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fbacqn3783/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fbacqn3783/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】杂交水稻之父 袁隆平的大实话</h2>
-
+<a href="https://dld25pfif4r64.cloudfront.net/I7jju6Xnf"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年05月27日讯】5月22日，大陆“杂交<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E6%B0%B4%E7%A8%BB.md#1">水稻</a>之父”、著名农学家<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>，在湖南长沙去世，享年91岁，有点出乎意外的是，他的离世却在中国引起了巨大的反响。中共官媒进行了铺天盖地的宣传。</p>
-<p>湖南省的领导层也几乎是全体出动，像是省委书记、省长、省政协主席都出席了<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>的告别仪式。另外，还有大批民众到殡仪馆献花，甚至有人跪地痛哭。在很多中国人的眼里，袁隆平已经被“神化”。</p>
+	<p>【大纪元2021年05月27日讯】5月22日，大陆“杂交<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B0%B4%E7%A8%BB.md#1">水稻</a>之父”、著名农学家<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>，在湖南长沙去世，享年91岁，有点出乎意外的是，他的离世却在中国引起了巨大的反响。中共官媒进行了铺天盖地的宣传。</p>
+<p>湖南省的领导层也几乎是全体出动，像是省委书记、省长、省政协主席都出席了<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>的告别仪式。另外，还有大批民众到殡仪馆献花，甚至有人跪地痛哭。在很多中国人的眼里，袁隆平已经被“神化”。</p>
 <p>但与此同时，民间也发出一些不同的声音，结果是，遭到了官方的严打，两天的时间里至少有7名网民，因为发表了针对袁隆平的所谓“侮辱性言论”而被拘捕，还有至少64个微博账号被永久封号。</p>
-<p>那么，作为一名<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E6%B0%B4%E7%A8%BB.md#1">水稻</a>专家，袁隆平为何能获得中共当局如此高的“礼遇”呢？到底应该怎样来看待袁隆平呢？中共又为什么要打压民间的质疑声音呢？我们今天就来谈谈这些话题。</p>
-<p><a src="https://www.youmaker.com/embed/3bd63610-8775-418d-888f-1c378a814cbc?r=16x9&amp;d=774" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>那么，作为一名<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B0%B4%E7%A8%BB.md#1">水稻</a>专家，袁隆平为何能获得中共当局如此高的“礼遇”呢？到底应该怎样来看待袁隆平呢？中共又为什么要打压民间的质疑声音呢？我们今天就来谈谈这些话题。</p>
+<p><a src=""></a><a href="https://dld25pfif4r64.cloudfront.net/I7jju6Xnf"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/536c1280-f345-47dc-aebc-c0cce0203bb2?r=16x9&amp;d=766" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>袁隆平的实际贡献是否被夸大？</h2>
-<p>中国人对于袁隆平的崇敬之情，很大程度上是源于这样一个说法，就是中国人民吃饱饭主要靠“两平”：一个是代表政策的邓小平，一个是代表技术的袁隆平，也就是说，包产到户加<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E6%9D%82%E4%BA%A4%E6%B0%B4%E7%A8%BB.md#1">杂交水稻</a>，这两样让中国人不再饿肚子。</p>
-<p>官媒在报导中说，袁隆平的<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E6%9D%82%E4%BA%A4%E6%B0%B4%E7%A8%BB.md#1">杂交水稻</a>让中国的水稻亩产提高了20%，因此多养活了7,000万人。而且，袁隆平的杂交水稻技术，不仅造福中国，还为全人类作出了贡献，原因是还被推广到了亚洲和非洲的很多国家。</p>
+<p>中国人对于袁隆平的崇敬之情，很大程度上是源于这样一个说法，就是中国人民吃饱饭主要靠“两平”：一个是代表政策的邓小平，一个是代表技术的袁隆平，也就是说，包产到户加<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9D%82%E4%BA%A4%E6%B0%B4%E7%A8%BB.md#1">杂交水稻</a>，这两样让中国人不再饿肚子。</p>
+<p>官媒在报导中说，袁隆平的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9D%82%E4%BA%A4%E6%B0%B4%E7%A8%BB.md#1">杂交水稻</a>让中国的水稻亩产提高了20%，因此多养活了7,000万人。而且，袁隆平的杂交水稻技术，不仅造福中国，还为全人类作出了贡献，原因是还被推广到了亚洲和非洲的很多国家。</p>
 <p>我想，我们都不否认袁老先生对中国农业发展作出的贡献，但是说中国人因为有了杂交水稻技术，就不用担心饿肚子了，这就是言过其实了。但是这也恰恰说明，中国人对于饥饿的印象实在是太深刻了，而且袁隆平本人就是一个亲身经历者。</p>
 <p>1958年至1960年，毛泽东搞了一场“大跃进”运动，实行农业集体化和大炼钢铁，结果是让中国在1959到1961年的三年中陷入了一场现代史上最严重的饥荒，导致了几千万人的死亡。在这场运动开始时，袁隆平28岁，大学毕业才5年，正在湖南省一所农学院当教师。</p>
 <p>在2009年4月《广州日报》的一次专访中，袁隆平还特别提到了这段历史。他说，现在的年轻人不知道，在当时的三年大饥荒时期，“大跃进”把树都砍了去炼钢铁，把生态破坏了，结果1959年大干旱，一年基本上没有收成，饿死了四五千万人。袁隆平还特别提到，他就在路边、桥下亲眼见到过5个饿死的人，非常凄惨。</p>
@@ -46,52 +46,46 @@
 <p>其实，就是在那个大饥荒年代，也不应该饿死人。一位大陆农业研究人员说，那时候很多国家都主动要求送粮食给中国，连前苏联都说暂缓债务。但问题是，当时中共的领导人们必须要保住这个党的面子，饿死人在他们看来并没有党的危机更重要。</p>
 <p>换句话说，杂交水稻的成功，不能保证人民不饿肚子，但是中共制度却是可以饿死人的，这就是中国人见证过的道路。</p>
 <p>策划：宇文铭<br />
-主播：<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E8%94%9A%E7%84%B6.md#1">蔚然</a><br />
+主播：<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%94%9A%E7%84%B6.md#1">蔚然</a><br />
 撰文：李松筠、财商经济研究所<br />
 剪辑：大中<br />
 监制：文静<br />
-<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/21/n12966302.md#1">【财商天下】美中芯片之争 三星会选谁？</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/22/n12968324.md#1">【财商天下】贸易与人权再挂钩 中共还能挺多久</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12975557.md#1">【财商天下】比特币兴风作浪 谁是大玩家？</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/21/n12966302.md#1">【财商天下】美中芯片之争 三星会选谁？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/22/n12968324.md#1">【财商天下】贸易与人权再挂钩 中共还能挺多久</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/25/n12975557.md#1">【财商天下】比特币兴风作浪 谁是大玩家？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077932.md#1" target="_blank">中国教育的失败源于破坏传统文化及灌输党文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/20/n12963544.md#1">血月是什么征兆 圣经预言怎么说？</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/22/n12967538.md#1">中华文化有“血月”之说吗  有教人避难之法吗？</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/20/n12964086.md#1">【未解之谜】水往高处流 探秘“神秘点”</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12978036.md#1">【新闻看点】李克强只两条路？俄不抗美北京慌</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12977714.md#1">【重播】美智库：对抗中共在印太数字扩张</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12975098.md#1">死亡赛事惊动习近平 逝者家属曝官方拿钱堵嘴</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973919.md#1">你中奖了吗？110年3-4月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972758.md#1">被问为何继续当演员 舒淇6字回应笑翻全场</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/27/n12978414.md#1">38岁胡歌近照曝光 消瘦老态惊呆网友</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12973141.md#1">同行被说沦为洗车工 黄秋生：该价值观很势利</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972884.md#1">甄珍在香港眩晕摔倒 第二次开颅做手术</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972633.md#1">沉默缺氧造成新冠患者猝死增？2类人要警惕</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12977519.md#1">台湾疫情告急 到底该不该普筛？专家解答</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12974398.md#1">【重播】警惕！新冠病毒在1个地方 最容易传播</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12976124.md#1">受益法轮功 折磨婴儿的罕见皮肤病彻底痊愈</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fbacqn3783/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fbacqn3783/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/27/n12980022.htm">【财商天下】杂交水稻之父 袁隆平的大实话</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/27/n12980022.htm">【财商天下】杂交水稻之父 袁隆平的大实话</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fbacqn3783/djy/blob/master/gb/21/5/27/n12980022.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fbacqn3783/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fbacqn3783/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fbacqn3783/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/5/27/n12980022.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
